--- a/css/main.less
+++ b/css/main.less
@@ -6,6 +6,7 @@
 @import "normalize.less";
 
 body {
+	background: #f3f4f5 url("../img/bg.png") repeat; 
     font-family: Roboto, "Segoe UI", "HelveticaNeue Light", HelveticaNeue, Ubuntu, Sans-serif;
     font-size: 16px;
     line-height: 1;
@@ -27,3 +28,70 @@ h5 {
 a {
     color: @blue;
     }
+
+
+.box() {
+	background-color: #fff;
+	box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.06);
+	}
+
+
+.clearfix() {
+	&:before,
+	&:after {
+		content: " "; // 1
+		display: table; // 2
+		}
+	&:after {
+		clear: both;
+		}
+}
+
+.wrapper {
+	width: 960px;
+	margin: 0 auto;
+	}
+
+.header {
+	background-color: @blue;
+	border-bottom: 4px solid @yellow;
+	padding: 30px 0;
+	margin-top: 10px;
+	}
+
+.main-b {
+	.box();
+	padding: 10px 0;
+	margin: 10px 0;
+	}
+
+	.galery-b {
+		padding: 0 10px;
+		.clearfix;
+
+		&__i {
+			display: block;
+			float: left;
+			width: 100% / 4;
+			-webkit-box-sizing: border-box;
+			   -moz-box-sizing: border-box;
+					box-sizing: border-box;
+
+			& + & {
+				padding-left: 10px;
+				}
+
+			img {
+				max-width: 100%;
+				height: auto;
+				}
+
+			}
+
+		}
+
+.sub-b {
+	.box();
+	padding: 30px 0;
+	margin: 30px 0;
+	}
