--- a/css/main.less
+++ b/css/main.less
@@ -66,20 +66,17 @@ a {
 	}
 
 	.galery-b {
-		padding: 0 10px;
+		padding: 0 10px 0 0;
 		.clearfix;
 
 		&__i {
 			display: block;
 			float: left;
 			width: 100% / 4;
+			padding-left: 10px;
 			-webkit-box-sizing: border-box;
 			   -moz-box-sizing: border-box;
 					box-sizing: border-box;
-
-			& + & {
-				padding-left: 10px;
-				}
 
 			img {
 				max-width: 100%;
