--- a/css/main.less
+++ b/css/main.less
@@ -482,6 +482,11 @@ a {
 	@media @m {
 		margin-right: @MobileIndent;
 		margin-left: @MobileIndent;
+
+		&-btn {
+			text-align: center;
+			}
+
 		}
 
 	}
