--- a/css/varibles.less
+++ b/css/varibles.less
@@ -8,6 +8,10 @@
 @fontFamilyTin: "Segoe UI", "Helvetica Neue", HelveticaNeue, Ubuntu, sans-serif;
 @fontTitle: Cuprum, Helvetica, Arial, Sans-serif;
 
+@mobileScreen: 640px;
+@tableScreen: 768px;
+@tableDesktop: 960px;
+
 @MobileIndent: 10px;
 
 @HeadLogoFontSize: 40px;
@@ -20,7 +24,7 @@
               ~"only screen and (-o-min-device-pixel-ratio: 3/2)",
               ~"only screen and (min-device-pixel-ratio: 1.5)";
 
-@m:  ~"only screen and (max-width: 640px)";
-@t:  ~"only screen and (max-width: 768px)";
-@o-t:  ~"only screen and (min-width: 640px) and (max-width: 768px)";
-@d:  ~"only screen and (max-width: 960px)";
+@m:  ~"only screen and (max-width: @{mobileScreen})";
+@t:  ~"only screen and (max-width: @{tableDesktop})";
+@o-t:  ~"only screen and (min-width: @{mobileScreen}) and (max-width: @{tableDesktop})";
+@d:  ~"only screen and (max-width: @{tableDesktop})";
