--- a/access/src/templates/about.html
+++ b/access/src/templates/about.html
@@ -1,19 +1,19 @@
 ﻿<!DOCTYPE html>
 <html>
-<head lang="ua">
+<head lang="{{lang}}">
     <meta charset="utf-8">
-    <title>For Heroes</title>
+    <title>{{title-about}}</title>
 	
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
-	<meta property="og:title" content="For Heroes">
-	<meta property="og:description" content="Ми збираємо на допомогу для наших героїв">
+	<meta property="og:title" content="{{title-about}}">
+	<meta property="og:description" content="{{description-about}}">
 	<meta property="og:url" content="http://forheroes.org.ua/">
 	<meta property="og:image" content="http://forheroes.org.ua/access/img/open-graph.jpg">
 
-	<meta property="og:locale" content="ua_UA">
-	<meta property="og:site_name" content="For Heroes">
+	<meta property="og:locale" content="{{lang-iso}}">
+	<meta property="og:site_name" content="{{title-about}}">
 	<meta property="og:type" content="article">
 	<meta property="article:publisher" content="https://www.facebook.com/groups/HandmadeForHeroes.UA">
 	
@@ -45,7 +45,7 @@
 	<link href="http://fonts.googleapis.com/css?family=Cuprum:400,700&subset=latin,cyrillic" rel="stylesheet" type="text/css">
 </head>
 <body class="load">
-	<noscript><div class="noscript">Для полной функциональности этого сайта необходимо включить JavaScript. Вот <a href='http://www.enable-javascript.com/ru/' target='_blank'>инструкции, как включить JavaScript в вашем браузере</a>.</div></noscript>
+	<noscript><div class="noscript">{{no-js-message}}</div></noscript>
 	
 	<div class="load_overlay" id="load_overlay">
 		<div class="load_animate">
@@ -71,7 +71,7 @@
 		<i class="head__flag sp-flag"></i>
 
 		<div class="wrapper">
-			<a class="head__logo" href="./">For heroes</a>
+			<a class="head__logo" href="./">{{head-name}}</a>
 
 			<button class="toogle-menu" id="toogleMenuBtn">
                 <i class="toogle-menu__i"></i>
@@ -81,16 +81,16 @@
 
 			<menu class="head__menu js-headMenu">
 				<li class="head__menu__i">
-					<a href="./">Збір коштів</a>
+					<a href="./">{{menu-name-1}}</a>
 				</li>
 				<li class="head__menu__i">
-					<a href="handmade.html">Handmade For Heroes</a>
+					<a href="handmade.html">{{menu-name-2}}</a>
 				</li>
 				<!-- <li class="head__menu__i">
 					<a href="what-donate.html">Звіти</a>
 				</li> -->
 				<li class="head__menu__i">
-					<a href="about.html">Про нас</a>
+					<a href="about.html">{{menu-name-3}}</a>
 				</li>
 				<li class="head__menu__i">
 					<div class="language" id="languageSwitcher">
@@ -105,7 +105,7 @@
 
 	<section class="main-b">
 		<div class="wrapper">
-			<h2 class="main-b__title">Волонтерська група</h2>
+			<h2 class="main-b__title">{{main-title-about}}</h2>
 	
 			<div class="row-fluid">
 				<div class="span4">
@@ -118,7 +118,7 @@
 						</div>
 					</div>
 
-					<h4 class="about-name">Тетяна Ковальчук</h4>
+					<h4 class="about-name">{{people-tetjana}}</h4>
 
 					<div class="social-btn text-center js-social">
 						<a class="social-btn__i sp-mi-fb" title="Facebook" href="https://www.facebook.com/tanja.kovalchyk" target="_blank"></a>
@@ -134,7 +134,7 @@
 						</div>
 					</div>
 
-					<h4 class="about-name">Юлія Смойловська</h4>
+					<h4 class="about-name">{{people-julіja}}</h4>
 
 					<div class="social-btn text-center js-social">
 						<a class="social-btn__i sp-mi-fb" title="Facebook" href="https://www.facebook.com/julia.smoylovskaya" target="_blank"></a>
@@ -151,7 +151,7 @@
 						</div>
 					</div>
 
-					<h4 class="about-name">Евгеній Славянський</h4>
+					<h4 class="about-name">{{people-evgenіj}}</h4>
 
 					<div class="social-btn text-center js-social">
 						<a class="social-btn__i sp-mi-fb" title="Facebook" href="https://www.facebook.com/E.Slavyansky" target="_blank"></a>
@@ -164,19 +164,19 @@
 
 	<footer class="about-footer">
 		<div class="wrapper">
-			<h3 class="about-footer__title">Контакти</h3>
+			<h3 class="about-footer__title">{{contackus-about}}</h3>
 
 			<div class="row-fluid">
 				<div class="span6">
 					<div class="about-footer__info">
 						<i class="icon sp-mi-cl"></i>
-						Телефон: <a href="tel:+38 044 290 86 92">+38 044 290 86 92</a>
+						{{phone-about}} <a href="tel:+38 044 290 86 92">+38 044 290 86 92</a>
 					</div>
 				</div>
 				<div class="span6">
 					<div class="about-footer__info">
 						<i class="icon sp-mi-em"></i>
-						Пошта: <script type="text/javascript">var zigxaxl = ['a','.','i','"','@','s','e','=','l','g','c','m','e','r','h','f','s','"','i','t','e','a','u','>','<','u','a','a','r','g','h','c','a','m','.','@','l','<','o',' ','o','l','m','=','e','o','m','o','r','s','"','h','.','m','a','o','m','o','i','r','.','/',' ','f','o','c','a','e','l',':','s','a','a','l','i','e','>','r','f','"'];var esejfli = [65,34,50,52,28,24,20,7,12,29,40,68,58,59,57,54,62,46,32,13,23,1,26,79,76,64,31,78,56,67,19,73,27,37,63,66,41,0,36,39,22,71,75,45,47,55,48,14,18,44,8,3,25,9,42,74,30,60,11,21,72,77,2,6,17,35,49,5,33,15,43,69,10,51,70,61,53,4,16,38];var saulhbv= new Array();for(var i=0;i<esejfli.length;i++){saulhbv[esejfli[i]] = zigxaxl[i]; }for(var i=0;i<saulhbv.length;i++){document.write(saulhbv[i]);}</script>
+						{{mail-about}} <script type="text/javascript">var zigxaxl = ['a','.','i','"','@','s','e','=','l','g','c','m','e','r','h','f','s','"','i','t','e','a','u','>','<','u','a','a','r','g','h','c','a','m','.','@','l','<','o',' ','o','l','m','=','e','o','m','o','r','s','"','h','.','m','a','o','m','o','i','r','.','/',' ','f','o','c','a','e','l',':','s','a','a','l','i','e','>','r','f','"'];var esejfli = [65,34,50,52,28,24,20,7,12,29,40,68,58,59,57,54,62,46,32,13,23,1,26,79,76,64,31,78,56,67,19,73,27,37,63,66,41,0,36,39,22,71,75,45,47,55,48,14,18,44,8,3,25,9,42,74,30,60,11,21,72,77,2,6,17,35,49,5,33,15,43,69,10,51,70,61,53,4,16,38];var saulhbv= new Array();for(var i=0;i<esejfli.length;i++){saulhbv[esejfli[i]] = zigxaxl[i]; }for(var i=0;i<saulhbv.length;i++){document.write(saulhbv[i]);}</script>
 					</div>
 				</div>
 			</div>
@@ -185,7 +185,7 @@
 		<div class="footer">
 			<div class="wrapper">
 				<p class="footer__t">
-					Розповсюдити інформацію про проект:
+					{{footer-share}}
 					<span class="social-btn js-social">
 						<a class="social-btn__i sp-mi-fb" id="fb-share" title="Facebook" href="#"></a>
 						<a class="social-btn__i sp-mi-tw" id="tw-share" title="Twitter" href="#"></a>
