--- a/access/src/templates/index.html
+++ b/access/src/templates/index.html
@@ -1,6 +1,6 @@
 ﻿<!DOCTYPE html>
-<html>
-<head lang="{{lang}}">
+<html lang="{{lang}}">
+<head>
     <meta charset="utf-8">
     <title>{{title-home}}</title>
 	
@@ -86,17 +86,14 @@
 				<li class="head__menu__i">
 					<a href="handmade.html">{{menu-name-2}}</a>
 				</li>
-				<!-- <li class="head__menu__i">
-					<a href="what-donate.html">Звіти</a>
-				</li> -->
 				<li class="head__menu__i">
 					<a href="about.html">{{menu-name-3}}</a>
 				</li>
 				<li class="head__menu__i">
 					<div class="language" id="languageSwitcher">
-						<a class="sp-flag-ua on" data-id="ua" href="ua/"></a>
-						<a class="sp-flag-pl" data-id="pl" href="pl/"></a>
-						<a class="sp-flag-en" data-id="en" href="en/"></a>
+						<a class="sp-flag-ua on" data-id="ua" title="Український" href="ua/"></a>
+						<a class="sp-flag-pl" data-id="pl" title="Polski" href="pl/"></a>
+						<a class="sp-flag-en" data-id="en" title="English" href="en/"></a>
 					</div>
 				</li>
 			</menu>
