--- a/access/src/templates/__header.html
+++ b/access/src/templates/__header.html
@@ -20,13 +20,13 @@
 			<li class="head__menu__i">
 				<a href="about.html">{{menu-name-3}}</a>
 			</li>
-			<li class="head__menu__i">
+			<!-- <li class="head__menu__i">
 				<div class="language" id="languageSwitcher">
 					<a class="sp-flag-ua on" data-id="ua" title="Український" href="ua/"></a>
 					<a class="sp-flag-pl" data-id="pl" title="Polski" href="pl/"></a>
 					<a class="sp-flag-en" data-id="en" title="English" href="en/"></a>
 				</div>
-			</li>
+			</li> -->
 		</menu>
 	</div>
 </header>
