--- a/access/src/templates/__head.html
+++ b/access/src/templates/__head.html
@@ -26,4 +26,4 @@ ga('send', 'pageview');
 <link rel="stylesheet" type="text/css" href="/access/css/main.min.css">
 <!--STYLE END-->
 
-<link href="http://fonts.googleapis.com/css?family=Cuprum:400,700&subset=latin,cyrillic" rel="stylesheet" type="text/css">
+<link href="https://fonts.googleapis.com/css?family=Cuprum:400,700&subset=latin,cyrillic" rel="stylesheet" type="text/css">
