--- a/access/src/templates/handmade.html
+++ b/access/src/templates/handmade.html
@@ -16,10 +16,10 @@
 	<meta property="og:site_name" content="{{title-handmade}}">
 	<meta property="og:type" content="article">
 	<meta property="article:publisher" content="https://www.facebook.com/groups/HandmadeForHeroes.UA">
-	
+
 	include "__head.html"
 </head>
-<body class="load">
+<body class="">
 	<noscript><div class="noscript">{{no-js-message}}</div></noscript>
 	
 	<div class="load_overlay" id="load_overlay">
