--- a/access/src/templates/about.html
+++ b/access/src/templates/about.html
@@ -19,7 +19,7 @@
 	
 	include "__head.html"
 </head>
-<body class="load">
+<body class="">
 	<noscript><div class="noscript">{{no-js-message}}</div></noscript>
 	
 	<div class="load_overlay" id="load_overlay">
